src/objects/Exception_Log__c.object
<CustomObject>
    <description>Used to log all exceptions</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Class name on which the exception occured</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correlation_ID__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>Method name on which the exception occured</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Fix__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether or not this exception needs to be fixed</description>
        <label>Needs Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who execute the code while the exception occurred</description>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exception_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_Message__c</fullName>
        <label>Stack Trace Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Exception Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Exception_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Class_Name__c</columns>
        <columns>Correlation_ID__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>Exception_Type__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Stack_Trace_Message__c</columns>
        <columns>Running_User__c</columns>
        <columns>Needs_Fix__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ELI-{0000000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>